# submap-sfm

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  smoke_db.py
configs/: default.yaml  full.yaml
scripts/: build_aug_pairs.py  build_pairs.py  cross_match_grid.py  make_random_keyframes.py  plot_coarse_to_fine.py  review_keyframes.py  run_matching.py  run_reconstruct.py  run_submaps.py  select_keyframes.py
submap_sfm/: colmap_db.py  keyframes.py  matching.py  pairs.py  reconstruct.py  scene.py
